[package]
name = "pulpchatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.0"
aws-sdk-dynamodb = "0.25.1"
tokio = { version = "1", features = ["full"] }
csv = "1.1"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
